--- a/PaperZee/lang/fi.json
+++ b/PaperZee/lang/fi.json
@@ -8,7 +8,6 @@
         "authenticate": "Autentikoidu",
         "auth_success": "Autentikointi onnistui",
         "scanner": "",
-        "the_quest": "",
         "maps": "",
         "credits": "",
         "app_info": "",
@@ -22,7 +21,12 @@
             "one": "",
             "other": ""
         },
-        "more": ""
+        "more": "",
+        "find_user": "",
+        "munzee_types": "",
+        "show_more": "",
+        "show_less": "",
+        "help": ""
     },
     "activity": {
         "user_captured": "{user} cappasi",
@@ -53,5 +57,16 @@
         },
         "none": "Ei yhtään",
         "user_today": "{user} tänään"
+    },
+    "user": {
+        "level_n": "",
+        "rank_n": "",
+        "inventory": "",
+        "your_bouncers": "",
+        "clan_progress": "",
+        "quebec_quest_progress": "",
+        "special_hunter_challenge": "",
+        "captured_types": "",
+        "activity": ""
     }
 }
