Update en-gb.json (POEditor.com)

--- a/PaperZee/lang/en-gb.json
+++ b/PaperZee/lang/en-gb.json
@@ -79,7 +79,7 @@
         "credits": "Credits",
         "primary_developer": "Primary Developer",
         "translator": "Translator",
-        "database_contributor": "Database Contributor",
+        "database_contributors": "Database Contributors",
         "patrons_and_supporters": "Patrons and Supporters",
         "build_n": "Build {build}"
     }
