Update en-gb.json (POEditor.com)

--- a/PaperZee/lang/en-gb.json
+++ b/PaperZee/lang/en-gb.json
@@ -78,7 +78,7 @@
     "app_info": {
         "credits": "Credits",
         "primary_developer": "Primary Developer",
-        "translator": "Translator",
+        "translators": "Translators",
         "database_contributors": "Database Contributors",
         "patrons_and_supporters": "Patrons and Supporters",
         "build_n": "Build {build}"
