Update fi.json (POEditor.com)

--- a/PaperZee/lang/fi.json
+++ b/PaperZee/lang/fi.json
@@ -65,7 +65,7 @@
         "rank_n": "Sijoitus #{number}",
         "inventory": "Omistuksesi",
         "your_bouncers": "Pomppijasi",
-        "clan_progress": "Edistymisesi llaanissa",
+        "clan_progress": "Edistymisesi klaanissa",
         "quebec_quest_progress": "Quebec Quest edistyminen",
         "special_hunter_challenge": "Spessun metsästäjän haaste",
         "captured_types": "Capatut tyypit",
