--- a/PaperZee/lang/cs.json
+++ b/PaperZee/lang/cs.json
@@ -30,7 +30,14 @@
         "show_less": "Zobrazit méně",
         "help": "Pomoc",
         "users": "Uživatelé",
-        "calendar": "Kalendář"
+        "calendar": "Kalendář",
+        "bouncers": "",
+        "notifications": "",
+        "contact": {
+            "facebook": "",
+            "email": ""
+        },
+        "clans": ""
     },
     "activity": {
         "user_captured": "{user} zachytil",
@@ -65,7 +72,19 @@
             "other": "{count} bodů"
         },
         "none": "Nic",
-        "user_today": "{user} dnes"
+        "user_today": "{user} dnes",
+        "user_renovated": "",
+        "you_renovated": "",
+        "renovation": {
+            "one": "",
+            "few": "",
+            "other": ""
+        },
+        "renovon": {
+            "one": "",
+            "few": "",
+            "other": ""
+        }
     },
     "user": {
         "level_n": "Level {level}",
@@ -76,12 +95,20 @@
         "quebec_quest_progress": "Postup v Quebec Quest",
         "special_hunter_challenge": "Výzva speciálních lovců",
         "captured_types": "Zachycené typy",
-        "activity": "Aktivita"
+        "activity": "Aktivita",
+        "clan_stats": "",
+        "clan_progress_desc": "",
+        "clan_info": "",
+        "clan_info_desc": "",
+        "challenges": "",
+        "sh_lite": "",
+        "sh_pro": ""
     },
     "inventory": {
         "undeployed": "Neumístěné",
         "credits": "Poděkování",
-        "history": "Historie"
+        "history": "Historie",
+        "unknown_name": ""
     },
     "app_info": {
         "credits": "Poděkování",
@@ -89,7 +116,23 @@
         "translators": "Překladatelé",
         "database_contributors": "Přispěvatelé do databáze",
         "patrons_and_supporters": "Patroni a podporovatelé",
-        "build_n": "Číslo sestavení {build}"
+        "build_n": "Číslo sestavení {build}",
+        "patreon_donate": "",
+        "paypal_donate": "",
+        "paypal_donate_desc": "",
+        "custom_titles": {
+            "primary_dev": "",
+            "finnish": "",
+            "dutch": "",
+            "german": "",
+            "hungarian": "",
+            "swedish": "",
+            "french": "",
+            "czech": "",
+            "danish": "",
+            "portugese": "",
+            "lithuanian": ""
+        }
     },
     "your_bouncers": {
         "capture": {
@@ -98,6 +141,170 @@
             "other": "{count} zachycení"
         },
         "last_captured": "Naposledy zachyceno: {time}",
-        "in_limbo": "Odpočívá"
+        "in_limbo": "Odpočívá",
+        "at_munzee": ""
+    },
+    "calendar": {
+        "days": {
+            "monday": "P",
+            "tuesday": "U",
+            "wednesday": "S",
+            "thursday": "C",
+            "friday": "P",
+            "saturday": "So",
+            "sunday": ""
+        },
+        "off": ""
+    },
+    "clan": {
+        "requirements": "",
+        "rewards": "",
+        "individual": "",
+        "group": "",
+        "level_n": "",
+        "shadow": "",
+        "goal": "",
+        "view": {
+            "subtract": "",
+            "total": ""
+        },
+        "share": "",
+        "indiv": "",
+        "group_total": "",
+        "level": {
+            "one": "",
+            "few": "",
+            "other": ""
+        }
+    },
+    "search": {
+        "clan": "",
+        "type": "",
+        "empty": "",
+        "user": ""
+    },
+    "db": {
+        "go_back": "",
+        "types_search": "",
+        "category": "",
+        "type": {
+            "info": "",
+            "evo": "",
+            "pouch": "",
+            "can_host": "",
+            "lands_on": ""
+        }
+    },
+    "auth": {
+        "add": "",
+        "welcome": "",
+        "tap": ""
+    },
+    "shc": {
+        "lite": {
+            "tob": "",
+            "nomad": "",
+            "myth_1": "",
+            "myth_2": "",
+            "pc_1": "",
+            "pc_2": "",
+            "flat": "",
+            "temp": "",
+            "scatter": ""
+        },
+        "pro": {
+            "tob": "",
+            "nomad": "",
+            "retire": "",
+            "myth_1": "",
+            "myth_2": "",
+            "myth_3": "",
+            "myth_4": "",
+            "pc_1": "",
+            "pc_2": "",
+            "pc_fun": "",
+            "flat": "",
+            "temp": "",
+            "pscatter": "",
+            "vscatter": ""
+        }
+    },
+    "notifications": {
+        "munzee_blog": "",
+        "save": "",
+        "unavailable_web": "",
+        "unavailable_generic": ""
+    },
+    "settings": {
+        "add_user": "",
+        "update": "",
+        "theme": "",
+        "language": ""
+    },
+    "bouncers": {
+        "duration": ""
+    },
+    "scanner": {
+        "scan_new": "",
+        "munzee": "",
+        "type": ""
+    },
+    "quest": {
+        "task_1": "",
+        "task_2": "",
+        "task_3": "",
+        "task_4": "",
+        "task_5": "",
+        "task_6": "",
+        "task_7": "",
+        "task_8": ""
+    },
+    "themes": {
+        "black": "",
+        "blue": "",
+        "bluegrey": "",
+        "darkblue": "",
+        "green": "",
+        "grey": "",
+        "purple": "",
+        "white": ""
+    },
+    "screens": {
+        "_redirect": "",
+        "Map": "",
+        "Tools": "",
+        "Settings": "",
+        "Notifications": "",
+        "Info": "",
+        "Scanner": "",
+        "Calendar": "",
+        "Bouncers": "",
+        "BouncerMap": "",
+        "MunzeeDetails": "",
+        "MunzeeDetailsID": "",
+        "AllClans": "",
+        "ClanRequirements": "",
+        "ClanSearch": "",
+        "Clan": "",
+        "UserSearch": "",
+        "UserDetails": "",
+        "UserActivity": "",
+        "UserInventory": "",
+        "UserClan": "",
+        "UserQuest": "",
+        "UserCapturesCategory": "",
+        "UserSHCPro": "",
+        "UserSHCLite": "",
+        "UserSHC": "",
+        "UserBouncers": "",
+        "DBType": "",
+        "DBSearch": "",
+        "DBCategory": "",
+        "Auth": ""
+    },
+    "changelog": {
+        "build_n": "",
+        "continue": "",
+        "no_changelog": ""
     }
 }
