--- a/PaperZee/lang/da.json
+++ b/PaperZee/lang/da.json
@@ -28,7 +28,14 @@
         "show_less": "Vis mindre",
         "help": "Hjælp",
         "users": "Brugere",
-        "calendar": "Kalender"
+        "calendar": "Kalender",
+        "bouncers": "Springere",
+        "notifications": "notifikationer",
+        "contact": {
+            "facebook": "Du kan kontakte os via Facebook",
+            "email": "eller emaile os på support@cuppazee.app"
+        },
+        "clans": "Klaner"
     },
     "activity": {
         "user_captured": "{user} skannede",
@@ -58,7 +65,17 @@
             "other": "{count} point"
         },
         "none": "Ingen",
-        "user_today": "{user} i dag"
+        "user_today": "{user} i dag",
+        "user_renovated": "{user} renoverede dit motel",
+        "you_renovated": "Du renoverede et motel",
+        "renovation": {
+            "one": "{count} renovering",
+            "other": "{count} renoveringer"
+        },
+        "renovon": {
+            "one": "",
+            "other": ""
+        }
     },
     "user": {
         "level_n": "Niveau {level}",
@@ -69,12 +86,20 @@
         "quebec_quest_progress": "\"Quebec udfordring\"-fremskridt",
         "special_hunter_challenge": "Special-jæger udfordringen",
         "captured_types": "Skannede typer",
-        "activity": "Aktivitet"
+        "activity": "Aktivitet",
+        "clan_stats": "",
+        "clan_progress_desc": "",
+        "clan_info": "",
+        "clan_info_desc": "",
+        "challenges": "",
+        "sh_lite": "",
+        "sh_pro": ""
     },
     "inventory": {
         "undeployed": "Ikke-placerede",
         "credits": "Kreditter",
-        "history": "Historik"
+        "history": "Historik",
+        "unknown_name": ""
     },
     "app_info": {
         "credits": "Anerkendelser",
@@ -82,7 +107,23 @@
         "translators": "Oversættere",
         "database_contributors": "Database-bidragsydere",
         "patrons_and_supporters": "Patrons og supportere",
-        "build_n": "Build {build}"
+        "build_n": "Build {build}",
+        "patreon_donate": "",
+        "paypal_donate": "",
+        "paypal_donate_desc": "",
+        "custom_titles": {
+            "primary_dev": "",
+            "finnish": "",
+            "dutch": "",
+            "german": "",
+            "hungarian": "",
+            "swedish": "",
+            "french": "",
+            "czech": "",
+            "danish": "",
+            "portugese": "",
+            "lithuanian": ""
+        }
     },
     "your_bouncers": {
         "capture": {
@@ -90,6 +131,169 @@
             "other": "{count} skanninger"
         },
         "last_captured": "Sidst skannet: {time}",
-        "in_limbo": "Tager en pause"
+        "in_limbo": "Tager en pause",
+        "at_munzee": ""
+    },
+    "calendar": {
+        "days": {
+            "monday": "M",
+            "tuesday": "T",
+            "wednesday": "O",
+            "thursday": "T",
+            "friday": "F",
+            "saturday": "L",
+            "sunday": "S"
+        },
+        "off": "fra"
+    },
+    "clan": {
+        "requirements": "Krav",
+        "rewards": "Gevinster",
+        "individual": "Individuel",
+        "group": "Gruppe",
+        "level_n": "Niveau {level}",
+        "shadow": "Skygge-klan",
+        "goal": "Mål",
+        "view": {
+            "subtract": "Subtraheret visning",
+            "total": "Totalvisning"
+        },
+        "share": "Del",
+        "indiv": "Indiv",
+        "group_total": "Gruppetotal",
+        "level": {
+            "one": "Niveau",
+            "other": "Niveauer"
+        }
+    },
+    "search": {
+        "clan": "Søg efter en klan",
+        "type": "Søg efter en munzee-type",
+        "empty": "Ingen resultater :(",
+        "user": "Søg efter en bruger"
+    },
+    "db": {
+        "go_back": "Gå tilbage",
+        "types_search": "Type-søgning",
+        "category": "Kategori",
+        "type": {
+            "info": "Ikon: {icon} - ID: {id}",
+            "evo": "Udviklingsstadier",
+            "pouch": "Posevæsen-stadier",
+            "can_host": "Kan være vært",
+            "lands_on": "Lander på"
+        }
+    },
+    "auth": {
+        "add": "Tilføj en ny bruger",
+        "welcome": "Velkommen til CuppaZee",
+        "tap": "Tryk nedenfor for at logge ind"
+    },
+    "shc": {
+        "lite": {
+            "tob": "AlternaMyth eller bortløbne posevæsener",
+            "nomad": "Nomade eller RetireMyth",
+            "myth_1": "Original eller klassisk mytologisk",
+            "myth_2": "Spejl- eller moderne mytologisk",
+            "pc_1": "",
+            "pc_2": "",
+            "flat": "",
+            "temp": "",
+            "scatter": ""
+        },
+        "pro": {
+            "tob": "",
+            "nomad": "Nomade",
+            "retire": "RetireMyth",
+            "myth_1": "Original mytologisk",
+            "myth_2": "",
+            "myth_3": "",
+            "myth_4": "",
+            "pc_1": "",
+            "pc_2": "",
+            "pc_fun": "",
+            "flat": "",
+            "temp": "",
+            "pscatter": "",
+            "vscatter": ""
+        }
+    },
+    "notifications": {
+        "munzee_blog": "",
+        "save": "",
+        "unavailable_web": "",
+        "unavailable_generic": ""
+    },
+    "settings": {
+        "add_user": "",
+        "update": "",
+        "theme": "",
+        "language": ""
+    },
+    "bouncers": {
+        "duration": ""
+    },
+    "scanner": {
+        "scan_new": "",
+        "munzee": "",
+        "type": ""
+    },
+    "quest": {
+        "task_1": "",
+        "task_2": "",
+        "task_3": "",
+        "task_4": "",
+        "task_5": "",
+        "task_6": "",
+        "task_7": "",
+        "task_8": ""
+    },
+    "themes": {
+        "black": "",
+        "blue": "",
+        "bluegrey": "",
+        "darkblue": "",
+        "green": "",
+        "grey": "",
+        "purple": "",
+        "white": ""
+    },
+    "screens": {
+        "_redirect": "",
+        "Map": "",
+        "Tools": "",
+        "Settings": "",
+        "Notifications": "",
+        "Info": "",
+        "Scanner": "",
+        "Calendar": "",
+        "Bouncers": "",
+        "BouncerMap": "",
+        "MunzeeDetails": "",
+        "MunzeeDetailsID": "",
+        "AllClans": "",
+        "ClanRequirements": "",
+        "ClanSearch": "",
+        "Clan": "",
+        "UserSearch": "",
+        "UserDetails": "",
+        "UserActivity": "",
+        "UserInventory": "",
+        "UserClan": "",
+        "UserQuest": "",
+        "UserCapturesCategory": "",
+        "UserSHCPro": "",
+        "UserSHCLite": "",
+        "UserSHC": "",
+        "UserBouncers": "",
+        "DBType": "",
+        "DBSearch": "",
+        "DBCategory": "",
+        "Auth": ""
+    },
+    "changelog": {
+        "build_n": "",
+        "continue": "",
+        "no_changelog": ""
     }
 }
