--- a/PaperZee/lang/en-gb.json
+++ b/PaperZee/lang/en-gb.json
@@ -28,7 +28,14 @@
         "show_less": "Show Less",
         "help": "Help",
         "users": "Users",
-        "calendar": "Calendar"
+        "calendar": "Calendar",
+        "bouncers": "Bouncers",
+        "notifications": "notifications",
+        "contact": {
+            "facebook": "You can contact us via Facebook",
+            "email": "or email us at support@cuppazee.app"
+        },
+        "clans": "Clans"
     },
     "activity": {
         "user_captured": "{user} captured",
@@ -58,7 +65,17 @@
             "other": "{count} Points"
         },
         "none": "None",
-        "user_today": "{user} Today"
+        "user_today": "{user} Today",
+        "user_renovated": "{user} renovated your Motel",
+        "you_renovated": "You renovated a Motel",
+        "renovation": {
+            "one": "{count} Renovation",
+            "other": "{count} Renovations"
+        },
+        "renovon": {
+            "one": "{count} Renov-on",
+            "other": "{count} Renov-ons"
+        }
     },
     "user": {
         "level_n": "Level {level}",
@@ -69,12 +86,20 @@
         "quebec_quest_progress": "Quebec Quest Progress",
         "special_hunter_challenge": "Special Hunter Challenge",
         "captured_types": "Captured Types",
-        "activity": "Activity"
+        "activity": "Activity",
+        "clan_stats": "Clan Stats",
+        "clan_progress_desc": "See what level you can reach!",
+        "clan_info": "Clan War Info FB Group",
+        "clan_info_desc": "A great place to find a clan or ask questions!",
+        "challenges": "Challenges",
+        "sh_lite": "Special Hunter Lite",
+        "sh_pro": "Special Hunter Pro"
     },
     "inventory": {
         "undeployed": "Undeployed",
         "credits": "Credits",
-        "history": "History"
+        "history": "History",
+        "unknown_name": "Unknown Name"
     },
     "app_info": {
         "credits": "Credits",
@@ -82,7 +107,23 @@
         "translators": "Translators",
         "database_contributors": "Database Contributors",
         "patrons_and_supporters": "Patrons and Supporters",
-        "build_n": "Build {build}"
+        "build_n": "Build {build}",
+        "patreon_donate": "Monthly via Patreon",
+        "paypal_donate": "One-Time via PayPal",
+        "paypal_donate_desc": "PayPal donations can be sent to donate@cuppazee.app",
+        "custom_titles": {
+            "primary_dev": "Primary Developer",
+            "finnish": "Finnish",
+            "dutch": "Dutch",
+            "german": "German",
+            "hungarian": "Hungarian",
+            "swedish": "Swedish",
+            "french": "French",
+            "czech": "Czech",
+            "danish": "Danish",
+            "portugese": "Portugese",
+            "lithuanian": "Lithuanian"
+        }
     },
     "your_bouncers": {
         "capture": {
@@ -90,6 +131,169 @@
             "other": "{count} Captures"
         },
         "last_captured": "Last Captured: {time}",
-        "in_limbo": "Taking a Rest"
+        "in_limbo": "Taking a Rest",
+        "at_munzee": "At {munzee}"
+    },
+    "calendar": {
+        "days": {
+            "monday": "M",
+            "tuesday": "T",
+            "wednesday": "W",
+            "thursday": "T",
+            "friday": "F",
+            "saturday": "S",
+            "sunday": "S"
+        },
+        "off": "off"
+    },
+    "clan": {
+        "requirements": "Requirements",
+        "rewards": "Rewards",
+        "individual": "Individual",
+        "group": "Group",
+        "level_n": "Level {level}",
+        "shadow": "Shadow Clan",
+        "goal": "Goal",
+        "view": {
+            "subtract": "Subtract View",
+            "total": "Total View"
+        },
+        "share": "Share",
+        "indiv": "Indiv",
+        "group_total": "Group Total",
+        "level": {
+            "one": "Level",
+            "other": "Levels"
+        }
+    },
+    "search": {
+        "clan": "Search for a Clan",
+        "type": "Search for a Munzee Type",
+        "empty": "No Results :(",
+        "user": "Search for a User"
+    },
+    "db": {
+        "go_back": "Go Back",
+        "types_search": "Types Search",
+        "category": "Category",
+        "type": {
+            "info": "Icon: {icon} - ID: {id}",
+            "evo": "Evolution Stages",
+            "pouch": "Pouch Creature Stages",
+            "can_host": "Can Host",
+            "lands_on": "Lands On"
+        }
+    },
+    "auth": {
+        "add": "Add a new User",
+        "welcome": "Welcome to CuppaZee",
+        "tap": "Tap below to log in"
+    },
+    "shc": {
+        "lite": {
+            "tob": "AlternaMyth or Escaped PC",
+            "nomad": "Nomad or RetireMyth",
+            "myth_1": "Original or Classical Myth",
+            "myth_2": "Mirror or Modern Myth",
+            "pc_1": "Pouch Creature S1",
+            "pc_2": "Pouch Creature S2",
+            "flat": "Fancy Flat",
+            "temp": "Evo Bouncer / tPOB",
+            "scatter": "Scatter"
+        },
+        "pro": {
+            "tob": "AlternaMyth or Escaped PC",
+            "nomad": "Nomad",
+            "retire": "RetireMyth",
+            "myth_1": "Original Myth",
+            "myth_2": "Classical Myth",
+            "myth_3": "Mirror Myth",
+            "myth_4": "Modern Myth",
+            "pc_1": "Pouch Creature S1",
+            "pc_2": "Pouch Creature S2",
+            "pc_fun": "Funfinity Stone",
+            "flat": "Fancy Flat",
+            "temp": "Evo Bouncer / tPOB",
+            "pscatter": "Physical Scatter",
+            "vscatter": "Virtual Scatter"
+        }
+    },
+    "notifications": {
+        "munzee_blog": "Munzee Blog",
+        "save": "Save",
+        "unavailable_web": "Notifications are unavailable on Web",
+        "unavailable_generic": "Notifications are unavailable. Did you accept the permissions?"
+    },
+    "settings": {
+        "add_user": "Add User",
+        "update": "Force Update",
+        "theme": "Theme: {name}",
+        "language": "Language: {name}"
+    },
+    "bouncers": {
+        "duration": "Duration: {duration}"
+    },
+    "scanner": {
+        "scan_new": "Scan New Munzee",
+        "munzee": "{name} by {username}",
+        "type": "Type: {type}"
+    },
+    "quest": {
+        "task_1": "Mystery Caps/Deps",
+        "task_2": "Evo Caps/Deps",
+        "task_3": "Weapon Caps/Deps",
+        "task_4": "Jewel Caps/Deps",
+        "task_5": "Capture /m/XeresDan/1707",
+        "task_6": "Flat Friend Deps",
+        "task_7": "Destination Caps/Deps",
+        "task_8": "Bouncer Caps"
+    },
+    "themes": {
+        "black": "Black",
+        "blue": "Blue",
+        "bluegrey": "Blue Grey",
+        "darkblue": "Dark Blue",
+        "green": "Green",
+        "grey": "Grey",
+        "purple": "Purple",
+        "white": "White"
+    },
+    "screens": {
+        "_redirect": "_redirect",
+        "Map": "Map",
+        "Tools": "Tools",
+        "Settings": "Settings",
+        "Notifications": "Notifications",
+        "Info": "Info",
+        "Scanner": "Scanner",
+        "Calendar": "Calendar",
+        "Bouncers": "Bouncers",
+        "BouncerMap": "Bouncer Map",
+        "MunzeeDetails": "Munzee Details",
+        "MunzeeDetailsID": "Munzee Details",
+        "AllClans": "All Clans",
+        "ClanRequirements": "Clan Requirements",
+        "ClanSearch": "Clan Search",
+        "Clan": "Clan Stats",
+        "UserSearch": "User Search",
+        "UserDetails": "User Details",
+        "UserActivity": "Activity",
+        "UserInventory": "Inventory",
+        "UserClan": "Clan Progress",
+        "UserQuest": "Quest Progress",
+        "UserCapturesCategory": "Captures Category",
+        "UserSHCPro": "SHC Pro",
+        "UserSHCLite": "SHC Lite",
+        "UserSHC": "SHC Classic",
+        "UserBouncers": "User Bouncers",
+        "DBType": "Database Type",
+        "DBSearch": "Database Search",
+        "DBCategory": "Database Category",
+        "Auth": "Authenticate"
+    },
+    "changelog": {
+        "build_n": "Build {n}",
+        "continue": "Continue to CuppaZee",
+        "no_changelog": "No Changelog"
     }
 }
